cabal-version:      2.4
name:               sphere
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A browser proxy

-- A longer description of the package.
-- description:

bug-reports: https://github.com/vimpostor/sphere/issues

license: GPL-3.0-only

executable sphere
    main-is:          Main.hs
    other-modules:    Config, Match

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, directory, regex-tdfa, process
    hs-source-dirs:   app
    default-language: Haskell2010
