cabal-version:      2.4
name:               sphere
version:            0.1.0.0
synopsis: A browser proxy
description: A browser proxy application that can register different handlers for URI schemes
bug-reports: https://github.com/vimpostor/sphere/issues
license: GPL-3.0-only

executable sphere
    main-is:          Main.hs
    other-modules:    Config, Match
    build-depends:    base, directory, regex-tdfa, process
    hs-source-dirs:   app
    default-language: Haskell2010
